<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_location"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_add"
        app:showAsAction="ifRoom"
        />
</menu>