<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.AppCompatEditText
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_location"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:hint="@string/dialog_add_weather_hint"
    />