<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh"
        android:title="@string/menu_refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/delete"
        android:title="@string/menu_delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom"/>

</menu>